[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.5", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["arbitrary_precision"] }
